--- a/webapp/css/myPlants.css
+++ b/webapp/css/myPlants.css
@@ -25,24 +25,31 @@
     border: 1px solid white;
     border-radius: 8px;
     width: 300px;
-    height: 300px;
+    height: 10%;
     background-color: rgba(255, 255, 255, 0.3);
     margin: 2%;
     transition: transform 0.3s ease;
+    overflow: auto;
 }
 
 .card:hover {
-    transform: scale(1.1)
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 .card-top {
     height:180px;
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
 }
 
 .card-bottom {
     padding: 10px;
     letter-spacing: 1px;
     line-height: 24px;
+    height: 120px;
+    overflow: auto;
 }
 
 .card-divider {
