--- a/webapp/static/css/login.css
+++ b/webapp/static/css/login.css
@@ -8,6 +8,7 @@ h1 {
 
 h3 {
     font-size: 30pt;
+    margin-bottom: -20px;
 }
 
 .login-inputs {
@@ -18,6 +19,7 @@ h3 {
     border-radius: 10px;
     color: white;
     font-family: "Junge", cursive;
+    font-size: 15pt;
 }
 
 .login-box {
@@ -35,7 +37,7 @@ h3 {
 }
 
 .login-box button {
-    padding: 20px 70px 20px 70px;
+    padding: 20px 50px;
     background-color: rgba(0, 255, 0, 0.397);
     border: 1px solid rgb(255, 255, 255);
     color: white;
@@ -53,5 +55,15 @@ h3 {
 .login-table {
     width: 100%;
     height: 300px;
-    margin-top: 100px;
+}
+
+.login-alert {
+    font-size: 20pt;
+    margin: 40px;
+    padding: 20px 100px;
+    border: 1px solid rgb(255, 0, 0);
+    color: red;
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.397);
 }
