--- a/webapp/static/css/index.css
+++ b/webapp/static/css/index.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    font-size: 55px;
+    font-size: 6vmin;
     width: 90%;
     z-index: 1;
     position: absolute;
