--- a/webapp/static/css/main.css
+++ b/webapp/static/css/main.css
@@ -10,12 +10,11 @@ body {
 
 nav {
     display: flex;
-    /* justify-content: space-evenly; */
     border-top: 1px solid white;
     border-bottom: 1px solid white;
     background-color: rgba(255, 255, 255, 0.288);
-    font-size: 28pt;
-    height: 60px;
+    font-size: 3vmin;
+    height: 4.5vmin;
     position: fixed;
     width: 100%;
     z-index: 2;
