--- a/webapp/static/css/login.css
+++ b/webapp/static/css/login.css
@@ -71,3 +71,15 @@ h3 {
 p {
     font-size: 20pt;
 }
+
+::-webkit-file-upload-button {
+    color: white;
+    background-color: rgba(255, 255, 255, 0);
+    border: 1px solid white;
+    border-radius: 3px;
+    width: 30%;
+}
+
+::-webkit-file-upload-button:hover {
+    cursor: pointer;
+}
