--- a/webapp/static/css/plantPage.css
+++ b/webapp/static/css/plantPage.css
@@ -8,7 +8,7 @@
 
 #plant-body h1 {
     font-size: 50px;
-    margin-bottom: -10px;
+    margin-bottom: 30px;
 }
 
 #plant-body p {
@@ -42,8 +42,9 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    word-wrap: break-word;
     padding: 30px;
-    width: 80%;
-    height: 450px;
+    width: 100vmin;
+    height: 35vh;
 }
 
