Changes to make nav styling more responsive

--- a/webapp/static/css/main.css
+++ b/webapp/static/css/main.css
@@ -20,6 +20,10 @@ nav {
     z-index: 2;
 }
 
+.nav-image {
+    height: 90%;
+}
+
 #navigation-links {
     display: flex;
     justify-content: space-evenly;
