Still figuring this out

--- a/webapp/templates/editPlant.jinja
+++ b/webapp/templates/editPlant.jinja
@@ -43,7 +43,7 @@
             </div>
             <div class="login-box">
                 <label>Picture</label>
-                <input type="file" class="login-inputs" name="picture" accept="image/jpeg, image/png, image/jpg" required id="picture">
+                <input type="file" class="login-inputs" name="picture" accept="image/jpeg, image/png, image/jpg" id="picture">
             </div>
             <div class="login-box">
                 <button id="submit">Submit</button>
