--- a/webapp/templates/plant.jinja
+++ b/webapp/templates/plant.jinja
@@ -27,18 +27,32 @@
             <p id="caption"></p>
         </div>
         <div class="centered">
+        {% if session['username'] == plant['owner']%}
+        {# If the owner of the plant is the one looking, show watering info and buttons to edit / add a new watering #}
             {%if dateDifference(plant['lastWatered']) == 1%}
-                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid white; padding: 2px;">{{dateDifference(plant['lastWatered'])}}</span> day. Way to stay on top of your watering!</p>
+                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid white; padding: 2px; width: 20pt">{{dateDifference(plant['lastWatered'])}}</span> day. Way to stay on top of your watering!</p>
             {%elif dateDifference(plant['lastWatered']) < 7%}
                 <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid white; padding: 2px;">{{dateDifference(plant['lastWatered'])}}</span> days. Way to stay on top of your watering!</p>
             {%elif dateDifference(plant['lastWatered']) >= 7%}
-                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid yellow; padding: 2px; color: yellow">{{dateDifference(plant['lastWatered'])}}</span> days. Time to grab the watering can!</p>
+                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid yellow; padding: 2px; color: yellow; width: 24pt;">{{dateDifference(plant['lastWatered'])}}</span> days. Time to grab the watering can!</p>
             {%elif dateDifference(plant['lastWatered']) >= 14%}
                 <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid red; padding: 2px; color: red">{{dateDifference(plant['lastWatered'])}}</span> days. You should probably get on that.</p>
             {%endif%}
-            <button onclick="water()">Click here to register a watering for today</button>
-            <a href="/templates/editPlant?id={{plant['_id']}}"><button>Click here to edit {{plant['name']}}'s information</button></a>
-            {# <p>Click <a style="text-decoration: underline" href="/templates/editPlant?id={{plant['_id']}}">here</a> to edit {{plant['name']}}'s information</p> <br><br> #}
+                <button onclick="water()">Click here to register a watering for today</button>
+                <a href="/templates/editPlant?id={{plant['_id']}}"><button>Click here to edit {{plant['name']}}'s information</button></a>
+        {% else %}
+            <p>This is {{plant['owner']}}'s {{plant['species']}}.</p>
+            <p>It's name is {{plant['name']}}, how fun is that?</p>
+            {%if dateDifference(plant['lastWatered']) == 1%}
+                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid white; padding: 2px; width: 20pt">{{dateDifference(plant['lastWatered'])}}</span> day. {{plant['owner']}} must be a watering pro!</p>
+            {%elif dateDifference(plant['lastWatered']) < 7%}
+                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid white; padding: 2px;">{{dateDifference(plant['lastWatered'])}}</span> days. {{plant['owner']}} must be a watering pro!</p>
+            {%elif 7 <= dateDifference(plant['lastWatered']) < 14%}
+                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid yellow; padding: 2px; color: yellow; width: 24pt;">{{dateDifference(plant['lastWatered'])}}</span> days. Time for {{plant['owner']}} to grab the watering can!</p>
+            {%elif dateDifference(plant['lastWatered']) >= 14%}
+                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid red; padding: 2px; color: red">{{dateDifference(plant['lastWatered'])}}</span> days. {{plant['owner']}} should probably get on that.</p>
+            {%endif%}
+        {% endif %}
         </div>
         <div class="dividing-line"></div>
         <div class="centered">
