--- a/webapp/static/css/login.css
+++ b/webapp/static/css/login.css
@@ -3,7 +3,7 @@
 }
 
 h1 {
-    font-size: 50pt;
+    font-size: 8vh;
 }
 
 h3 {
@@ -12,7 +12,7 @@ h3 {
 }
 
 .login-inputs {
-    padding: 20px;
+    padding: 2vmin;
     width: 30%;
     background: rgba(255, 255, 255, 0.329);
     border: 1px solid white;
@@ -28,7 +28,7 @@ h3 {
     align-items: center;
     display: flex;
     justify-content: center;
-    padding: 30px 0px 30px 0px;
+    /* padding: 30px 0px 30px 0px; */
 }
 
 .login-box label {
