--- a/webapp/templates/editPlant.jinja
+++ b/webapp/templates/editPlant.jinja
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/login.css">
     <!-- JS -->
     <script defer src="../js/populate-nav.js"></script>
-    <script src="../js/form-populate.js"></script>
+    <script src="../js/edit-plant.js"></script>
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,6 +46,7 @@
                 <label>Picture</label>
                 <input type="file" class="login-inputs" name="picture" accept="image/jpeg, image/png, image/jpg" id="picture">
             </div>
+                <input type="text" style="display: none" id="id" name="id">   
             <div class="login-box">
                 <button id="submit">Submit</button>
             </div>
