--- a/webapp/static/css/plantPage.css
+++ b/webapp/static/css/plantPage.css
@@ -65,3 +65,7 @@ button:hover {
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0.40);
 }
+
+#watering {
+    text-wrap: nowrap;
+}
