--- a/webapp/static/css/main.css
+++ b/webapp/static/css/main.css
@@ -13,8 +13,10 @@ nav {
     border-top: 1px solid white;
     border-bottom: 1px solid white;
     background-color: rgba(255, 255, 255, 0.288);
-    font-size: 4vmin;
+    font-size: 3vmin;
     height: 6vmin;
+    min-height: auto;
+    max-height: 10vmin;
     position: fixed;
     width: 100%;
     z-index: 2;
@@ -25,10 +27,13 @@ nav {
 }
 
 #navigation-links {
+    margin-top: auto;
+    margin-bottom: auto;
     display: flex;
     justify-content: space-evenly;
     width: 100%;
 }
+
 #navigation-image {
     border: 1px solid white;
     padding-left: 5px;
@@ -46,6 +51,7 @@ nav {
 
 #navigation-links a:hover {
     background-color: rgba(255, 255, 255, 0.3);
+    display: block;
 }
 
 a {
