changes to add dynamic text

--- a/webapp/templates/editPlant.jinja
+++ b/webapp/templates/editPlant.jinja
@@ -22,7 +22,7 @@
     <nav>
     </nav>
     <div class="centered">
-        <h1>Time for some edits!</h1>
+        <h1 style="font-size: 5vmin;">Let's make some edits to {{plant['name']}}</h1>
         <div class="dividing-line"></div>
         <div class="login-alert" style="display: none"></div>
         <form class="login-table" method="POST" action="/api/editPlant" enctype="multipart/form-data">
