--- a/webapp/templates/plant.jinja
+++ b/webapp/templates/plant.jinja
@@ -22,14 +22,14 @@
     </nav>
     <div id="plant-body">
         <h1 id="p-header">All about {{plant['name']}}!</h1>
+        {% if session['username'] != plant['owner']%}
+            <p>Owned by {{plant['owner']}}</p>
+        {% endif %}
         <div id="picture-and-caption">
             <img id="plant-picture" src="../backend/uploads/{{plant['fname']}}">
             <p id="caption"></p>
         </div>
         <div class="centered">
-        {% if session['username'] != plant['owner']%}
-            <p><strong>Owner:</strong> {{plant['owner']}}</p>
-        {% endif %}
         <div style="text-align: center">
             <p><strong>Name:</strong> {{plant['name']}}</p>
             <p><strong>Species:</strong> {{plant['species']}}</p>
@@ -49,8 +49,6 @@
                 <button onclick="water()">Click here to register a watering for today</button>
                 <a href="/templates/editPlant?id={{plant['_id']}}"><button>Click here to edit {{plant['name']}}'s information</button></a>
         {% else %}
-            <p>This is {{plant['owner']}}'s {{plant['species']}}.</p>
-            <p>It's name is {{plant['name']}}, how fun is that?</p>
             {%if dateDifference(plant['lastWatered']) == 1%}
                 <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid white; padding: 2px; width: 20pt">{{dateDifference(plant['lastWatered'])}}</span> day. {{plant['owner']}} must be a watering pro!</p>
             {%elif dateDifference(plant['lastWatered']) < 7%}
