--- a/webapp/static/css/plantFeed.css
+++ b/webapp/static/css/plantFeed.css
@@ -1,37 +1,41 @@
-.card {
-    display: flex;
-    flex-direction: row;
+.card:hover {
+    cursor: pointer;
+    transform: scale(1.1)
 }
 
-.card-left {
-    width: 30%;
-    height: 5%;
+.card {
+    width: 30vmin;
+    height: 50vmin;
     border: 1px solid white;
     display: flex;
     justify-content: center;
-    padding: 10px;
-}
-
-.card-right {
-    width: 100%;
-    border: 1px solid white;
-    line-height: 150%;
-    padding-left: 10px;
+    border-radius: 20px;
+    overflow: hidden;
+    margin: 2vmin;
+    transition: transform 0.3s ease;
 }
 
 #plants {
     display: flex;
     align-items: center;
-    flex-direction: column;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 h1 {
     margin-top: 8vmin;
+    font-size: 6vmin;
 }
 
-.card-left img {
-    max-width: 70%;
-    max-height: 70%;
+p {
+    font-size: 3vmin;
+}
+
+.card img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;
+    border-radius: 20px; 
     display: block;
 }
 
