--- a/webapp/templates/plant.jinja
+++ b/webapp/templates/plant.jinja
@@ -35,28 +35,30 @@
             <p><strong>Species:</strong> {{plant['species']}}</p>
             <p><strong>Description:</strong> {{plant['description']}}</p>
         </div>
+        <div id="watering">
         {% if session['username'] == plant['owner']%}
         {# If the owner of the plant is the one looking, show watering info and buttons to edit / add a new watering #}
             {%if dateDifference(plant['lastWatered']) == 1%}
-                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid white; padding: 2px; width: 20pt">{{dateDifference(plant['lastWatered'])}}</span> day. Way to stay on top of your watering!</p>
+                <p>{{plant['name']}} has not been watered in <span class="white">{{dateDifference(plant['lastWatered'])}}</span> day. Way to stay on top of your watering!</p>
             {%elif dateDifference(plant['lastWatered']) < 7%}
-                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid white; padding: 2px; width: 20pt">{{dateDifference(plant['lastWatered'])}}</span> days. Way to stay on top of your watering!</p>
+                <p>{{plant['name']}} has not been watered in <span class="white">{{dateDifference(plant['lastWatered'])}}</span> days. Way to stay on top of your watering!</p>
             {%elif dateDifference(plant['lastWatered']) < 14%}
-                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid yellow; padding: 2px; color: yellow; width: 24pt;">{{dateDifference(plant['lastWatered'])}}</span> days. Time to grab the watering can!</p>
+                <p>{{plant['name']}} has not been watered in <span class="yellow">{{dateDifference(plant['lastWatered'])}}</span> days. Time to grab the watering can!</p>
             {%else%}
-                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid red; padding: 2px; color: red; width: 24pt;">{{dateDifference(plant['lastWatered'])}}</span> days. You should probably get on that.</p>
+                <p>{{plant['name']}} has not been watered in <span class="red">{{dateDifference(plant['lastWatered'])}}</span> days. You should probably get on that.</p>
             {%endif%}
+                </div>
                 <button onclick="water()">Click here to register a watering for today</button>
                 <a href="/templates/editPlant?id={{plant['_id']}}"><button>Click here to edit {{plant['name']}}'s information</button></a>
         {% else %}
             {%if dateDifference(plant['lastWatered']) == 1%}
-                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid white; padding: 2px; width: 20pt">{{dateDifference(plant['lastWatered'])}}</span> day. {{plant['owner']}} must be a watering pro!</p>
+                <p id="watering">{{plant['name']}} has not been watered in <span class="white">{{dateDifference(plant['lastWatered'])}}</span> day. {{plant['owner']}} must be a watering pro!</p>
             {%elif dateDifference(plant['lastWatered']) < 7%}
-                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid white; padding: 2px; width: 20pt">{{dateDifference(plant['lastWatered'])}}</span> days. {{plant['owner']}} must be a watering pro!</p>
+                <p id="watering">{{plant['name']}} has not been watered in <span class="white">{{dateDifference(plant['lastWatered'])}}</span> days. {{plant['owner']}} must be a watering pro!</p>
             {%elif dateDifference(plant['lastWatered']) < 14%}
-                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid yellow; padding: 2px; color: yellow; width: 24pt;">{{dateDifference(plant['lastWatered'])}}</span> days. Time for {{plant['owner']}} to grab the watering can!</p>
+                <p id="watering">{{plant['name']}} has not been watered in <span class="yellow">{{dateDifference(plant['lastWatered'])}}</span> days. Time for {{plant['owner']}} to grab the watering can!</p>
             {%else%}
-                <p id="watering">{{plant['name']}} has not been watered in <span style="border: 1px solid red; padding: 2px; color: red; width: 24pt">{{dateDifference(plant['lastWatered'])}}</span> days. {{plant['owner']}} should probably get on that.</p>
+                <p id="watering">{{plant['name']}} has not been watered in <span class="red">{{dateDifference(plant['lastWatered'])}}</span> days. {{plant['owner']}} should probably get on that.</p>
             {%endif%}
         {% endif %}
         </div>
