--- a/webapp/static/css/login.css
+++ b/webapp/static/css/login.css
@@ -3,7 +3,7 @@
 }
 
 h1 {
-    font-size: 8vh;
+    font-size: 8vmin;
 }
 
 h3 {
@@ -28,6 +28,7 @@ h3 {
     align-items: center;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     /* padding: 30px 0px 30px 0px; */
 }
 
