--- a/webapp/static/css/myPlants.css
+++ b/webapp/static/css/myPlants.css
@@ -44,11 +44,17 @@
 }
 
 .card-top {
-    height:180px;
+    height:300px;
     display: flex;
     justify-content: center;
-    padding-top: 10px;
+    /* padding-top: 10px; */
     background-color: rgba(255, 255, 255, 0.116);
+}
+
+.card-top img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
 }
 
 .card-bottom {
